Fix spacing

--- a/fpbench.css
+++ b/fpbench.css
@@ -239,9 +239,9 @@ header + .alert {
 .schedule h1 a[href] { color: #204a87; }
 .schedule h1 a[href]:hover { color: #444; }
 .schedule time { float: right; }
-.schedule h3 { margin: 0; font: normal 100% Helvetica, Ariel, sans-serif; }
-.schedule p  { margin: 0 0 .5em; color: #666; }
-.schedule .links { margin: -.5em 0 .5em; padding: 0; }
+.schedule h3 { margin: .5em 0 0; font: normal 100% Helvetica, Ariel, sans-serif; }
+.schedule p  { margin: 0; color: #666; }
+.schedule .links { margin: 0; padding: 0; }
 .schedule .links li { display: inline-block; margin: 0; }
 .schedule .links li:after { content: ", "; }
 .schedule .links li:last-child:after { content: ""; }
